--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -4,24 +4,31 @@ on:
   push:
     branches: [ test ]
 jobs:
-  build:
+  deploy-shiny:
 
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Build image
-        run: docker build -t test .
+      - uses: r-lib/actions/setup-r@master
 
-      - name: execute
-        run: >
-          docker run
-          -e SHINY_ACC_NAME=${{ secrets.SHINY_ACC_NAME }}
-          -e TOKEN=${{secrets.TOKEN}}
-          -e SECRET=${{secrets.SECRET}}
-          -e MASTERNAME=${{secrets.TESTNAME}}
-          test
+      - name: Install shiny
+        run: |
+          install.packages(c("shiny", "rsconnect"), type = "binary")
+        shell: Rscript {0}
+      
+      #- name: shinyapps credentials
+      #  with:
+      #    rsconnect_secret: ${{ secrets.RSCONNECT }}
+      #  run: Rscript -e 'rsconnect::setAccountInfo(name="myusername", token="tokengoeshere", secret="$rsconnect_secret")'
+      #  shell: Rscript {0}
+
+      - name: Push to shiny.io
+        run: |
+          Rscript -e "rsconnect::setAccountInfo(name='${{ secrets.SHINY_ACC_NAME }}', token=${{secrets.${{ secrets.TOKEN }}}}, secret=${{secrets.${{ secrets.SECRET }}}})"
+          Rscript -e "rsconnect::deployApp(appName = '${{ secrets.TESTNAME }}')" 
+
 
 
 
