--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Push to shiny.io
         run: |
-          Rscript -e "rsconnect::setAccountInfo(name='${{ secrets.SHINY_ACC_NAME }}', token=${{secrets.${{ secrets.TOKEN }}}}, secret=${{secrets.${{ secrets.SECRET }}}})"
-          Rscript -e "rsconnect::deployApp(appName = '${{ secrets.TESTNAME }}')" 
+          Rscript -e "rsconnect::setAccountInfo(name=${{ secrets.SHINY_ACC_NAME }}, token=${{ secrets.TOKEN }}, secret=${{ secrets.SECRET }})"
+          Rscript -e "rsconnect::deployApp(appName = ${{ secrets.TESTNAME }})" 
 
 
 
