--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -24,12 +24,12 @@ jobs:
           Rscript -e "install.packages(c('curl'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
           
 
-      - name: Push to shinyapps.io
-        run: >
-          Rscript
-          -e "install.packages(c('shiny', 'rsconnect'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
-          -e "rsconnect::setAccountInfo(name='${{ secrets.SHINY_ACC_NAME }}', token='${{ secrets.TOKEN }}', secret='${{ secrets.SECRET }}')"
-          -e "rsconnect::deployApp(appName = '${{ secrets.TESTNAME }}' )"
+      #- name: Push to shinyapps.io
+      #  run: >
+      #    Rscript
+      #    -e "install.packages(c('shiny', 'rsconnect'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
+      #    -e "rsconnect::setAccountInfo(name='${{ secrets.SHINY_ACC_NAME }}', token='${{ secrets.TOKEN }}', secret='${{ secrets.SECRET }}')"
+      #    -e "rsconnect::deployApp(appName = '${{ secrets.TESTNAME }}' )"
       
       #- name: shinyapps credentials
       #  with:
