--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -22,7 +22,10 @@ jobs:
         run: |
           sudo apt-get install -y libcurl4-openssl-dev
           Rscript -e "install.packages(c('curl'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
-          Rscript -e "install.packages(c('shiny', 'rsconnect'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
+          Rscript -e "install.packages(c('rsconnect'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
+          Rscript -e "rsconnect::setAccountInfo(name='${{ secrets.SHINY_ACC_NAME }}', token='${{ secrets.TOKEN }}', secret='${{ secrets.SECRET }}')"
+          
+      #Rscript -e "install.packages(c('shiny', 'rsconnect'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
           
 
       #- name: Push to shinyapps.io
