--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -23,6 +23,7 @@ jobs:
           sudo apt-get install -y libcurl4-openssl-dev
           Rscript -e "install.packages(c('curl'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
           Rscript -e "install.packages(c('agromet'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
+          Rscript -e "install.packages(c('siga'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
           Rscript -e "install.packages(c('rsconnect'), INSTALL_opts=c('--no-help', '--no-html'), repos='http://cran.r-project.org')"
           Rscript -e "rsconnect::setAccountInfo(name='${{ secrets.SHINY_ACC_NAME }}', token='${{ secrets.TOKEN }}', secret='${{ secrets.SECRET }}')"
           Rscript -e "rsconnect::deployApp(appName = '${{ secrets.TESTNAME }}' )"
