--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@master
+      #- uses: r-lib/actions/setup-r@master
+      - uses: rocker-org/rocker@master
 
       #- name: Install shiny
       #  run: |
