--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       #- uses: r-lib/actions/setup-r@master
-      - uses: rocker-org/rocker@master
+      - uses: rocker-org/rocker/tree/master/r-base/latest@master
 
       #- name: Install shiny
       #  run: |
