--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -17,10 +17,10 @@ jobs:
       - name: execute
         run: >
           docker run
-            -e SHINY_ACC_NAME=${{ secrets.SHINY_ACC_NAME }}
-            -e TOKEN=${{secrets.TOKEN}}
-            -e SECRET=${{secrets.SECRET}}
-            -e MASTERNAME=${{secrets.MASTER_NAME}}
+          -e SHINY_ACC_NAME=${{ secrets.SHINY_ACC_NAME }}
+          -e TOKEN=${{secrets.TOKEN}}
+          -e SECRET=${{secrets.SECRET}}
+          -e MASTERNAME=${{secrets.TESTNAME}}
           image_test
       
       #- name: install curl
