--- a/.github/workflows/deploy-shinyappio.yml
+++ b/.github/workflows/deploy-shinyappio.yml
@@ -20,7 +20,7 @@ jobs:
           -e SHINY_ACC_NAME=${{ secrets.SHINY_ACC_NAME }}
           -e TOKEN=${{secrets.TOKEN}}
           -e SECRET=${{secrets.SECRET}}
-          -e MASTERNAME=${{secrets.TESTNAME}}
+          -e TESTNAME=${{secrets.TESTNAME}}
           image_test
       
       #- name: install curl
